отдельные сущности для цвета, материала, производителя, модели. Адаптация форм для вещей