@@ -4,17 +4,16 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.RequestParam;
 import rsreu.itemsharing.entities.*;
 import rsreu.itemsharing.repositories.*;
 
-import java.sql.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Controller("/")
 public class MainWindowController {
+
     @Autowired
     private ItemRepository itemRepository;
 
@@ -35,107 +34,6 @@ public class MainWindowController {
 
     @Autowired
     private ItemAttributeRepository itemAttributeRepository;
-
-//    @GetMapping()
-//    public String catalog(@RequestParam(required = false) Long category,
-//            @RequestParam(required = false) Map<String, String> filters, Model model) {
-//        List<Item> items;
-//
-//        if (category != null) {
-//            Category categoryEntity = categoryRepository.findById(category).orElse(null);
-//            if (categoryEntity != null) {
-//                items = itemRepository.findByCategory(categoryEntity);
-//            } else {
-//                items = itemRepository.findAll();
-//            }
-//        } else {
-//            items = itemRepository.findAll();
-//        }
-//
-//        Map<String, List<String>> photoUrlsMap = new HashMap<>();
-//
-//
-//        for (Item item : items) {
-//            List<ItemPhotoLink> itemPhotoLinks = itemPhotoLinkRepository.findByItem(item);
-//            List<String> photoUrls = new ArrayList<>();
-//            for (ItemPhotoLink itemPhotoLink : itemPhotoLinks) {
-//                photoUrls.add(itemPhotoLink.getPhotoLink().getUrl());
-//            }
-//            photoUrlsMap.put(item.getItemId(), photoUrls);
-//        }
-//
-//
-//        model.addAttribute("items", items);
-//        model.addAttribute("photoUrlsMap", photoUrlsMap);
-//
-//        if (category != null) {
-//            List<CategoryAttribute> categoryAttributes = categoryAttributeRepository.findById_CategoryId(category);
-//            model.addAttribute("category", category);
-//            model.addAttribute("categoryAttributes", categoryAttributes);
-//        }
-//
-//
-//        return "catalog";
-//    }
-
-//    @GetMapping()
-//    public String catalog(@RequestParam(required = false) Long category, Model model) {
-//        List<Item> items;
-//
-//        if (category != null) {
-//            Category categoryEntity = categoryRepository.findById(category).orElse(null);
-//            if (categoryEntity != null) {
-//                items = itemRepository.findByCategory(categoryEntity);
-//            } else {
-//                items = itemRepository.findAll();
-//            }
-//        } else {
-//            items = itemRepository.findAll();
-//        }
-//
-//        Map<String, List<String>> photoUrlsMap = new HashMap<>();
-//
-//
-//        for (Item item : items) {
-//            List<ItemPhotoLink> itemPhotoLinks = itemPhotoLinkRepository.findByItem(item);
-//            List<String> photoUrls = new ArrayList<>();
-//            for (ItemPhotoLink itemPhotoLink : itemPhotoLinks) {
-//                photoUrls.add(itemPhotoLink.getPhotoLink().getUrl());
-//            }
-//            photoUrlsMap.put(item.getItemId(), photoUrls);
-//        }
-//
-//
-//        model.addAttribute("items", items);
-//        model.addAttribute("photoUrlsMap", photoUrlsMap);
-//        model.addAttribute("categories", categoryRepository.findAll());
-//        if (category != null) {
-//            List<CategoryAttribute> categoryAttributes = categoryAttributeRepository.findById_CategoryId(category);
-//
-//            List<Attribute> attributes = categoryAttributes.stream()
-//                    .map(categoryAttribute -> attributeRepository.findByAttributeId(categoryAttribute.getId().getAttributeId()))
-//                    .collect(Collectors.toList());
-//
-//            Map<Long, List<String>> enumValuesMap = new HashMap<>();
-//            for (Attribute attribute : attributes) {
-//                if (attribute.getType() == AttributeType.ENUM) {
-//                    List<String> values = attributeEnumValueRepository.findById_AttributeId(attribute.getAttributeId())
-//                            .stream()
-//                            .map(value -> value.getId().getValue()) // Получаем сами строки значений
-//                            .collect(Collectors.toList());
-//                    enumValuesMap.put(attribute.getAttributeId(), values);
-//                }
-//            }
-//
-//            // Добавляем атрибуты в модель
-//            model.addAttribute("category", category);
-//            model.addAttribute("categoryAttributes", attributes);
-//            model.addAttribute("enumValuesMap", enumValuesMap);
-//        }
-//
-//
-//        return "catalog";
-//    }
 
     @GetMapping()
     public String catalog(@RequestParam(required = false) Long category,
@@ -171,30 +69,29 @@ public class MainWindowController {
                     .filter(Objects::nonNull)
                     .collect(Collectors.toList());
 
-            // Загружаем возможные значения ENUM
             for (Attribute attribute : attributes) {
                 if (attribute.getType() == AttributeType.ENUM) {
                     List<String> values = attributeEnumValueRepository.findById_AttributeId(attribute.getAttributeId())
                             .stream()
-                            .map(value -> value.getId().getValue()) // Достаём значения
+                            .map(value -> value.getId().getValue())
                             .collect(Collectors.toList());
                     enumValuesMap.put(attribute.getAttributeId(), values);
                 }
             }
         }
 
-        boolean allFiltersNull  = true;
-        for (Map.Entry<String, String> filter : filters.entrySet()) {
-            String filterKey = filter.getKey();
-            String filterValue = filter.getValue();
-            if (!Objects.equals(filterValue, "")) {
-                allFiltersNull = false;
-                break;
+        boolean allFiltersNull = true;
+        if (filters != null) {
+            for (Map.Entry<String, String> filter : filters.entrySet()) {
+                String filterValue = filter.getValue();
+                if (!Objects.equals(filterValue, "")) {
+                    allFiltersNull = false;
+                    break;
+                }
             }
         }
 
-
-        // **Применяем фильтры** (если они заданы)
+        // Применяем фильтры
         if (filters != null && !filters.isEmpty() && !allFiltersNull) {
             List<Item> filteredItems = new ArrayList<>();
 
@@ -206,7 +103,6 @@ public class MainWindowController {
                     continue;
                 }
 
-                // Заполняем карту атрибутов товара
                 for (ItemAttribute itemAttribute : itemAttributes) {
                     Attribute attribute = attributeRepository.findById(itemAttribute.getId().getAttribute()).orElseThrow();
                     String attributeName = attribute.getName();
@@ -221,13 +117,10 @@ public class MainWindowController {
                         } catch (NumberFormatException e) {
                             itemAttributeMap.put(attributeName, "Ошибка данных");
                         }
-//                        itemAttributeMap.put(attributeName, itemAttribute.getValueNumber().toString());
                     }
                 }
 
-                // Проверяем, проходит ли товар фильтры
                 boolean matches = true;
-
                 for (Map.Entry<String, String> filter : filters.entrySet()) {
                     String filterKey = filter.getKey();
                     String filterValue = filter.getValue();
@@ -236,10 +129,8 @@ public class MainWindowController {
                         continue;
                     }
 
-                    // Числовые фильтры (мин/макс)
                     if (filterKey.endsWith("_min") || filterKey.endsWith("_max")) {
                         String baseKey = filterKey.replace("_min", "").replace("_max", "");
-
                         if (itemAttributeMap.containsKey(baseKey)) {
                             double itemValue = Double.parseDouble(itemAttributeMap.get(baseKey));
                             if (filterKey.endsWith("_min") && itemValue < Double.parseDouble(filterValue)) {
@@ -251,7 +142,7 @@ public class MainWindowController {
                                 break;
                             }
                         }
-                    } else { // ENUM
+                    } else {
                         if (itemAttributeMap.containsKey(filterKey)) {
                             if (!itemAttributeMap.get(filterKey).equals(filterValue)) {
                                 matches = false;
@@ -269,13 +160,17 @@ public class MainWindowController {
             items = filteredItems;
         }
 
-
-
         // Загружаем фото товаров
         Map<String, List<String>> photoUrlsMap = new HashMap<>();
         for (Item item : items) {
             List<ItemPhotoLink> itemPhotoLinks = itemPhotoLinkRepository.findByItem(item);
-            List<String> photoUrls = itemPhotoLinks.stream().map(link -> link.getPhotoLink().getUrl()).toList();
+            List<String> photoUrls = itemPhotoLinks.stream()
+                    .map(link -> link.getPhotoLink().getUrl())
+                    .collect(Collectors.toList());
+            // Если у товара нет фотографий, добавляем запасной URL
+            if (photoUrls.isEmpty()) {
+                photoUrls = Collections.singletonList("default.png"); // Относительный путь к запасному изображению
+            }
             photoUrlsMap.put(item.getItemId(), photoUrls);
         }
 
@@ -290,6 +185,4 @@ public class MainWindowController {
 
         return "catalog";
     }
-
-
 }
